# embedded_project_stm32

./: .gitignore  CMakeLists.txt  chat.json  ftdi programmer parameter  stm32.ld  stm32_ls.ld  stm32_startup.c  stm32discovery.smmx  stm32f407.svd  stm32f40_41xx.ld
.run/: ftdi_programmer.run.xml  mcu1_b.elf.run.xml  mcu1_d.elf.run.xml
Src/: 002led_button.c  epaper.cpp  exp15_uart_tx.cpp  exp16_uart_case.cpp  exp17_i2c_master_tx_data.cpp  exp18_i2c_master_rx_testing.cpp  exp19_i2c_master_rx_it.cpp  exp1_toggle_push_pull_led.cpp  exp20_i2c_slave_tx_string.cpp  exp21_i2c_slave_tx_string2.cpp  exp22_adc_test.cpp  exp2_toggle_open_drain_led.cpp  exp3_button_led_control.cpp  exp4_external_button_led_control.cpp  exp5_gpio_interrupt_led_control.cpp  exp6.cpp  exp6_spi_send_data.cpp  exp7_1_spi_tx_to_arduino_with_interrupt.cpp  exp7_spi_send_to_slave.cpp  exp7_spi_tx_only_to_arduino.cpp  exp8_spi_cmd_handling.cpp  exp9_epaper.cpp  exp9_spi_message_rcv_it.cpp  exp_epaper.cpp  main.c  main.cpp
arduino/spi/001SPISlaveRxString/: 001SPISlaveRxString.ino
arduino/spi/003SPISlaveUartReadOverSPI/: 003SPISlaveUartReadOverSPI.ino
backup/c_files/Src/: 002led_button.cpp
backup/c_files/drivers/Inc/: stm32f407xx.h
backup/cpp_files/Src/: exp3_button_led_control.cpp
drivers/Inc/: stm32f407xx.h  stm32f407xx_adc_driver.h  stm32f407xx_gpio.h  stm32f407xx_gpio_driver.h  stm32f407xx_i2c_driver.h  stm32f407xx_rcc_driver.h  stm32f407xx_spi_driver.h  stm32f407xx_usart_driver.h
drivers/Src/: stm32407xx_adc_driver.cpp  stm32f407xx.cpp  stm32f407xx_gpio.cpp  stm32f407xx_gpio_driver.c  stm32f407xx_gpio_driver.cpp  stm32f407xx_i2c_driver.cpp  stm32f407xx_rcc_driver.cpp  stm32f407xx_spi_driver.cpp  stm32f407xx_usart_driver.cpp
epaper_image/: EpaperPaintUtil.py  barcode_generator.py  epaper_image.py
modules/: GUI_Paint.cpp  GUI_Paint.h  ImageData.cpp  ImageData.h  epaper.cpp  epaper.h
modules/epaper/Fonts/: font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp  fonts.h
modules/epaper/GUI/: GUI_Paint.cpp  GUI_Paint.h
modules/epaper/Inc/: EPD_2in66.h
modules/epaper/Src/: EPD_2in66.cpp
